--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <main>
         <div class="ficha">
+            <p>Nenhuma Ficha selecionada</p>
         </div>
         <aside>
             <div class="diceContainer">
